// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectCard/> should render card 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1wkillg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
        href="#/give/projects/project-1"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-w9v9yi-MuiTypography-root"
        >
          <strong>
            project Owner - some project
          </strong>
        </h4>
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-lg-4 css-pyn2lm-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1enxi5i-MuiGrid-root"
        style="max-height: 184px; overflow: hidden; border-radius: 16px;"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
            href="#/give/projects/project-1"
          >
            <img
              src="/assets/images/grants/playgrounds/playgrounds_logo.svg"
              width="100%"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-qsmpk5-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 project-content css-69sme-MuiTypography-root"
        >
          <div>
            <p>
              A short description for the card
            </p>
            

          </div>
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-13b7e87-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-8 css-aowpts-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7qiq2r-MuiGrid-root"
            style="padding-bottom: 8px;"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 subtext css-bhsuuc-MuiGrid-root"
            >
              <div
                class="project-countdown"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-1vfisdg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-112gc2l-MuiTypography-root"
                    >
                      00:00:00
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root css-vz6rvy-MuiGrid-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-112gc2l-MuiTypography-root"
                    >
                      Completed
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-9 project-goal-progress css-tao7r1-MuiGrid-root"
            >
              <span
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1mcjo4x-MuiLinearProgress-root"
                role="progressbar"
              >
                <span
                  class="MuiLinearProgress-bar ProjectCard-progress MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1o31aob-MuiLinearProgress-bar1"
                  style="transform: translateX(-100%);"
                />
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 MuiGrid-grid-sm-3 subtext css-nbzprc-MuiGrid-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse skeleton-inline css-1l7q9tc-MuiSkeleton-root"
                style="width: 20px;"
              />
              %
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4 css-dbu6st-MuiGrid-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
            href="#/projects/project-1"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-17qa7rh-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              View Details
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProjectCard/> should render card without image 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1wkillg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
        href="#/give/projects/project-1"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-w9v9yi-MuiTypography-root"
        >
          <strong>
            project Owner - some project
          </strong>
        </h4>
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-lg-4 css-pyn2lm-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1enxi5i-MuiGrid-root"
        style="max-height: 184px; overflow: hidden; border-radius: 16px;"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        >
          <img
            height="100%"
            src=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-qsmpk5-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 project-content css-69sme-MuiTypography-root"
        >
          <div>
            <p>
              A short description for the card
            </p>
            

          </div>
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-13b7e87-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-8 css-aowpts-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7qiq2r-MuiGrid-root"
            style="padding-bottom: 8px;"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 subtext css-bhsuuc-MuiGrid-root"
            >
              <div
                class="project-countdown"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-1vfisdg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-112gc2l-MuiTypography-root"
                    >
                      00:00:00
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root css-vz6rvy-MuiGrid-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-112gc2l-MuiTypography-root"
                    >
                      Completed
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-9 project-goal-progress css-tao7r1-MuiGrid-root"
            >
              <span
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1mcjo4x-MuiLinearProgress-root"
                role="progressbar"
              >
                <span
                  class="MuiLinearProgress-bar ProjectCard-progress MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1o31aob-MuiLinearProgress-bar1"
                  style="transform: translateX(-100%);"
                />
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 MuiGrid-grid-sm-3 subtext css-nbzprc-MuiGrid-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse skeleton-inline css-1l7q9tc-MuiSkeleton-root"
                style="width: 20px;"
              />
              %
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4 css-dbu6st-MuiGrid-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
            href="#/projects/project-1"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-17qa7rh-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              View Details
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProjectCard/> should render page 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-e057jq-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1iagzvf-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-5 css-gr5cd7-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-m19e0g-MuiPaper-root"
            style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1y6dg9a-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item card-header css-159wrwf-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-gg4vpm"
                >
                  <div
                    class="top-left"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-vgma6o-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                      >
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                          href="#/give"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-y3v3gx-MuiSvgIcon-root"
                            data-testid="ChevronLeftIcon"
                            focusable="false"
                            style="width: 12px; height: 12px;"
                            viewBox="6 6 12 12"
                          >
                            <path
                              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </a>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                      >
                        <h5
                          class="MuiTypography-root MuiTypography-h5 css-903ewo-MuiTypography-root"
                        >
                          project Owner - some project
                        </h5>
                      </div>
                    </div>
                  </div>
                  <div
                    class="top-right"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-12 css-olt10l-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-1enxi5i-MuiGrid-root"
                      style="max-height: 184px; overflow: hidden; border-radius: 16px;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
                      >
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                          href="#/give/projects/project-1"
                        >
                          <img
                            src="/assets/images/grants/playgrounds/playgrounds_logo.svg"
                            width="100%"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-cmg3fn-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-qy0ict-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-r441lk-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M10 14.0625C11.7259 14.0625 13.125 12.6634 13.125 10.9375C13.125 9.21161 11.7259 7.8125 10 7.8125C8.27411 7.8125 6.875 9.21161 6.875 10.9375C6.875 12.6634 8.27411 14.0625 10 14.0625Z"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M15.3125 9.06251C16.0404 9.06129 16.7586 9.23018 17.4096 9.55572C18.0607 9.88126 18.6267 10.3544 19.0625 10.9375"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M0.9375 10.9375C1.37328 10.3544 1.93928 9.88126 2.59036 9.55572C3.24144 9.23018 3.95957 9.06129 4.6875 9.06251"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M5.5 16.875C5.91158 16.0321 6.55163 15.3217 7.34722 14.8248C8.14282 14.3279 9.06198 14.0645 10 14.0645C10.938 14.0645 11.8572 14.3279 12.6528 14.8248C13.4484 15.3217 14.0884 16.0321 14.5 16.875"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M4.69004 9.0625C4.21554 9.06298 3.7507 8.92842 3.34984 8.67453C2.94898 8.42064 2.62865 8.05792 2.42628 7.62874C2.22391 7.19956 2.14785 6.72165 2.207 6.25085C2.26615 5.78006 2.45806 5.33581 2.76031 4.97003C3.06256 4.60426 3.46267 4.33205 3.91387 4.18521C4.36508 4.03838 4.84876 4.02298 5.30839 4.14083C5.76802 4.25867 6.18463 4.50489 6.50952 4.85071C6.83442 5.19653 7.05419 5.62767 7.14316 6.09375"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M12.8594 6.09375C12.9483 5.62767 13.1681 5.19653 13.493 4.85071C13.8179 4.50489 14.2345 4.25867 14.6941 4.14083C15.1538 4.02298 15.6375 4.03838 16.0887 4.18521C16.5399 4.33205 16.94 4.60426 17.2422 4.97003C17.5445 5.33581 17.7364 5.78006 17.7955 6.25085C17.8547 6.72165 17.7786 7.19956 17.5763 7.62874C17.3739 8.05792 17.0536 8.42064 16.6527 8.67453C16.2518 8.92842 15.787 9.06298 15.3125 9.0625"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  />
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                Donors
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-e6z9yf-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1jqheh3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-hgkx5n-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M3.125 8.96094V4.375C3.125 4.20924 3.19085 4.05027 3.30806 3.93306C3.42527 3.81585 3.58424 3.75 3.75 3.75H16.25C16.4158 3.75 16.5747 3.81585 16.6919 3.93306C16.8092 4.05027 16.875 4.20924 16.875 4.375V8.96094C16.875 15.5234 11.3047 17.6953 10.1953 18.0625C10.0693 18.1092 9.93072 18.1092 9.80469 18.0625C8.69531 17.6953 3.125 15.5234 3.125 8.96094Z"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M13.4375 8.125L8.85156 12.5L6.5625 10.3125"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  >
                                    <span
                                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                 
                                Deposited
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-1d18k5y-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-r441lk-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M13.75 11.875L17.5 8.125L13.75 4.375"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                  <path
                                    d="M15 16.875H3.125C2.95924 16.875 2.80027 16.8092 2.68306 16.6919C2.56585 16.5747 2.5 16.4158 2.5 16.25V6.875"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                  <path
                                    d="M5.85938 13.75C6.27643 12.1401 7.21619 10.7143 8.53119 9.69621C9.84618 8.67815 11.462 8.1255 13.125 8.125H17.5"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                </svg>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                              >
                                <span
                                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                                />
                              </div>
                            </div>
                            <div
                              class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                            >
                               
                              Yield
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-19kq2tc-MuiGrid-root"
                          />
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1jqheh3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-hgkx5n-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M17.118 10C15.205 13.9602 10 16.875 10 16.875C10 16.875 2.1875 12.5 2.1875 7.18751C2.1875 6.24836 2.51289 5.33821 3.1083 4.61193C3.70371 3.88564 4.53236 3.38808 5.45328 3.2039C6.37419 3.01971 7.33047 3.16029 8.15943 3.6017C8.98838 4.04311 9.63879 4.7581 10 5.62501C10.3612 4.7581 11.0116 4.04311 11.8406 3.6017C12.3009 3.35657 12.8005 3.20422 13.3115 3.14874"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M18 3.5L9.99659 11.5L7 9"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  >
                                    0
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                 
                                Deposit Goal
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 project-goal-progress css-bhsuuc-MuiGrid-root"
                          >
                            <span
                              aria-valuemax="100"
                              aria-valuemin="0"
                              aria-valuenow="0"
                              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1mcjo4x-MuiLinearProgress-root"
                              role="progressbar"
                            >
                              <span
                                class="MuiLinearProgress-bar ProjectCard-progress MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1o31aob-MuiLinearProgress-bar1"
                                style="transform: translateX(-100%);"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <button
                          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-8aw5i7-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          Connect Wallet
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7 css-mxqc31-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-m19e0g-MuiPaper-root"
          style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1y6dg9a-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item card-header css-159wrwf-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-gg4vpm"
              >
                <div
                  class="MuiBox-root css-1xhj18k"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 header-text css-903ewo-MuiTypography-root"
                  >
                    About
                  </h5>
                </div>
                <div
                  class="top-right"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                    href="https://project.co"
                    target="_blank"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M 9.991 0 C 4.471 0 0 4.48 0 10 C 0 15.52 4.471 20 9.991 20 C 15.521 20 20 15.52 20 10 C 20 4.48 15.521 0 9.991 0 Z M 16.921 6 L 13.971 6 C 13.651 4.751 13.191 3.551 12.591 2.44 C 14.431 3.071 15.961 4.351 16.921 6 Z M 10.001 2.04 C 10.831 3.24 11.481 4.571 11.911 6 L 8.091 6 C 8.521 4.571 9.171 3.24 10.001 2.04 Z M 2.26 12 C 2.101 11.36 2.001 10.691 2.001 10 C 2.001 9.311 2.101 8.64 2.26 8 L 5.641 8 C 5.561 8.66 5.501 9.32 5.501 10 C 5.501 10.68 5.561 11.34 5.641 12 L 2.26 12 Z M 3.081 14 L 6.031 14 C 6.351 15.251 6.811 16.451 7.411 17.56 C 5.571 16.931 4.041 15.66 3.081 14 Z M 6.031 6 L 3.081 6 C 4.041 4.34 5.571 3.071 7.411 2.44 C 6.811 3.551 6.351 4.751 6.031 6 Z M 10.001 17.96 C 9.171 16.76 8.521 15.431 8.091 14 L 11.911 14 C 11.481 15.431 10.831 16.76 10.001 17.96 Z M 12.341 12 L 7.661 12 C 7.571 11.34 7.501 10.68 7.501 10 C 7.501 9.32 7.571 8.651 7.661 8 L 12.341 8 C 12.431 8.651 12.501 9.32 12.501 10 C 12.501 10.68 12.431 11.34 12.341 12 Z M 12.591 17.56 C 13.191 16.451 13.651 15.251 13.971 14 L 16.921 14 C 15.961 15.651 14.431 16.931 12.591 17.56 Z M 14.361 12 C 14.441 11.34 14.501 10.68 14.501 10 C 14.501 9.32 14.441 8.66 14.361 8 L 17.741 8 C 17.9 8.64 18.001 9.311 18.001 10 C 18.001 10.691 17.9 11.36 17.741 12 L 14.361 12 Z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
            >
              <div
                class="project-content"
              >
                <p>
                  A longer description for the profile
                </p>
                

              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProjectCard/> should render page without finish date 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-e057jq-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1iagzvf-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-5 css-gr5cd7-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-m19e0g-MuiPaper-root"
            style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1y6dg9a-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item card-header css-159wrwf-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-gg4vpm"
                >
                  <div
                    class="top-left"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-vgma6o-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                      >
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                          href="#/give"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-y3v3gx-MuiSvgIcon-root"
                            data-testid="ChevronLeftIcon"
                            focusable="false"
                            style="width: 12px; height: 12px;"
                            viewBox="6 6 12 12"
                          >
                            <path
                              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </a>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                      >
                        <h5
                          class="MuiTypography-root MuiTypography-h5 css-903ewo-MuiTypography-root"
                        >
                          project Owner - some project
                        </h5>
                      </div>
                    </div>
                  </div>
                  <div
                    class="top-right"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-12 css-olt10l-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-1enxi5i-MuiGrid-root"
                      style="max-height: 184px; overflow: hidden; border-radius: 16px;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
                      >
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                          href="#/give/projects/project-1"
                        >
                          <img
                            src="/assets/images/grants/playgrounds/playgrounds_logo.svg"
                            width="100%"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-cmg3fn-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-qy0ict-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-r441lk-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M10 14.0625C11.7259 14.0625 13.125 12.6634 13.125 10.9375C13.125 9.21161 11.7259 7.8125 10 7.8125C8.27411 7.8125 6.875 9.21161 6.875 10.9375C6.875 12.6634 8.27411 14.0625 10 14.0625Z"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M15.3125 9.06251C16.0404 9.06129 16.7586 9.23018 17.4096 9.55572C18.0607 9.88126 18.6267 10.3544 19.0625 10.9375"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M0.9375 10.9375C1.37328 10.3544 1.93928 9.88126 2.59036 9.55572C3.24144 9.23018 3.95957 9.06129 4.6875 9.06251"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M5.5 16.875C5.91158 16.0321 6.55163 15.3217 7.34722 14.8248C8.14282 14.3279 9.06198 14.0645 10 14.0645C10.938 14.0645 11.8572 14.3279 12.6528 14.8248C13.4484 15.3217 14.0884 16.0321 14.5 16.875"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M4.69004 9.0625C4.21554 9.06298 3.7507 8.92842 3.34984 8.67453C2.94898 8.42064 2.62865 8.05792 2.42628 7.62874C2.22391 7.19956 2.14785 6.72165 2.207 6.25085C2.26615 5.78006 2.45806 5.33581 2.76031 4.97003C3.06256 4.60426 3.46267 4.33205 3.91387 4.18521C4.36508 4.03838 4.84876 4.02298 5.30839 4.14083C5.76802 4.25867 6.18463 4.50489 6.50952 4.85071C6.83442 5.19653 7.05419 5.62767 7.14316 6.09375"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M12.8594 6.09375C12.9483 5.62767 13.1681 5.19653 13.493 4.85071C13.8179 4.50489 14.2345 4.25867 14.6941 4.14083C15.1538 4.02298 15.6375 4.03838 16.0887 4.18521C16.5399 4.33205 16.94 4.60426 17.2422 4.97003C17.5445 5.33581 17.7364 5.78006 17.7955 6.25085C17.8547 6.72165 17.7786 7.19956 17.5763 7.62874C17.3739 8.05792 17.0536 8.42064 16.6527 8.67453C16.2518 8.92842 15.787 9.06298 15.3125 9.0625"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  />
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                Donors
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-e6z9yf-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1jqheh3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-hgkx5n-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M3.125 8.96094V4.375C3.125 4.20924 3.19085 4.05027 3.30806 3.93306C3.42527 3.81585 3.58424 3.75 3.75 3.75H16.25C16.4158 3.75 16.5747 3.81585 16.6919 3.93306C16.8092 4.05027 16.875 4.20924 16.875 4.375V8.96094C16.875 15.5234 11.3047 17.6953 10.1953 18.0625C10.0693 18.1092 9.93072 18.1092 9.80469 18.0625C8.69531 17.6953 3.125 15.5234 3.125 8.96094Z"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M13.4375 8.125L8.85156 12.5L6.5625 10.3125"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  >
                                    <span
                                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                 
                                Deposited
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-1d18k5y-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-r441lk-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M13.75 11.875L17.5 8.125L13.75 4.375"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                  <path
                                    d="M15 16.875H3.125C2.95924 16.875 2.80027 16.8092 2.68306 16.6919C2.56585 16.5747 2.5 16.4158 2.5 16.25V6.875"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                  <path
                                    d="M5.85938 13.75C6.27643 12.1401 7.21619 10.7143 8.53119 9.69621C9.84618 8.67815 11.462 8.1255 13.125 8.125H17.5"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                </svg>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                              >
                                <span
                                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                                />
                              </div>
                            </div>
                            <div
                              class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                            >
                               
                              Yield
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-19kq2tc-MuiGrid-root"
                          />
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1jqheh3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-hgkx5n-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M17.118 10C15.205 13.9602 10 16.875 10 16.875C10 16.875 2.1875 12.5 2.1875 7.18751C2.1875 6.24836 2.51289 5.33821 3.1083 4.61193C3.70371 3.88564 4.53236 3.38808 5.45328 3.2039C6.37419 3.01971 7.33047 3.16029 8.15943 3.6017C8.98838 4.04311 9.63879 4.7581 10 5.62501C10.3612 4.7581 11.0116 4.04311 11.8406 3.6017C12.3009 3.35657 12.8005 3.20422 13.3115 3.14874"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M18 3.5L9.99659 11.5L7 9"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  >
                                    0
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                 
                                Deposit Goal
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 project-goal-progress css-bhsuuc-MuiGrid-root"
                          >
                            <span
                              aria-valuemax="100"
                              aria-valuemin="0"
                              aria-valuenow="0"
                              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1mcjo4x-MuiLinearProgress-root"
                              role="progressbar"
                            >
                              <span
                                class="MuiLinearProgress-bar ProjectCard-progress MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1o31aob-MuiLinearProgress-bar1"
                                style="transform: translateX(-100%);"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <button
                          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-8aw5i7-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          Connect Wallet
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7 css-mxqc31-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-m19e0g-MuiPaper-root"
          style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1y6dg9a-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item card-header css-159wrwf-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-gg4vpm"
              >
                <div
                  class="MuiBox-root css-1xhj18k"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 header-text css-903ewo-MuiTypography-root"
                  >
                    About
                  </h5>
                </div>
                <div
                  class="top-right"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                    href="https://project.co"
                    target="_blank"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M 9.991 0 C 4.471 0 0 4.48 0 10 C 0 15.52 4.471 20 9.991 20 C 15.521 20 20 15.52 20 10 C 20 4.48 15.521 0 9.991 0 Z M 16.921 6 L 13.971 6 C 13.651 4.751 13.191 3.551 12.591 2.44 C 14.431 3.071 15.961 4.351 16.921 6 Z M 10.001 2.04 C 10.831 3.24 11.481 4.571 11.911 6 L 8.091 6 C 8.521 4.571 9.171 3.24 10.001 2.04 Z M 2.26 12 C 2.101 11.36 2.001 10.691 2.001 10 C 2.001 9.311 2.101 8.64 2.26 8 L 5.641 8 C 5.561 8.66 5.501 9.32 5.501 10 C 5.501 10.68 5.561 11.34 5.641 12 L 2.26 12 Z M 3.081 14 L 6.031 14 C 6.351 15.251 6.811 16.451 7.411 17.56 C 5.571 16.931 4.041 15.66 3.081 14 Z M 6.031 6 L 3.081 6 C 4.041 4.34 5.571 3.071 7.411 2.44 C 6.811 3.551 6.351 4.751 6.031 6 Z M 10.001 17.96 C 9.171 16.76 8.521 15.431 8.091 14 L 11.911 14 C 11.481 15.431 10.831 16.76 10.001 17.96 Z M 12.341 12 L 7.661 12 C 7.571 11.34 7.501 10.68 7.501 10 C 7.501 9.32 7.571 8.651 7.661 8 L 12.341 8 C 12.431 8.651 12.501 9.32 12.501 10 C 12.501 10.68 12.431 11.34 12.341 12 Z M 12.591 17.56 C 13.191 16.451 13.651 15.251 13.971 14 L 16.921 14 C 15.961 15.651 14.431 16.931 12.591 17.56 Z M 14.361 12 C 14.441 11.34 14.501 10.68 14.501 10 C 14.501 9.32 14.441 8.66 14.361 8 L 17.741 8 C 17.9 8.64 18.001 9.311 18.001 10 C 18.001 10.691 17.9 11.36 17.741 12 L 14.361 12 Z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
            >
              <div
                class="project-content"
              >
                <p>
                  A longer description for the profile
                </p>
                

              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProjectCard/> should render page without image 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-e057jq-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1iagzvf-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-5 css-gr5cd7-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-m19e0g-MuiPaper-root"
            style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1y6dg9a-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item card-header css-159wrwf-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-gg4vpm"
                >
                  <div
                    class="top-left"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-vgma6o-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                      >
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                          href="#/give"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-y3v3gx-MuiSvgIcon-root"
                            data-testid="ChevronLeftIcon"
                            focusable="false"
                            style="width: 12px; height: 12px;"
                            viewBox="6 6 12 12"
                          >
                            <path
                              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </a>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                      >
                        <h5
                          class="MuiTypography-root MuiTypography-h5 css-903ewo-MuiTypography-root"
                        >
                          project Owner - some project
                        </h5>
                      </div>
                    </div>
                  </div>
                  <div
                    class="top-right"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-12 css-olt10l-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-1enxi5i-MuiGrid-root"
                      style="max-height: 184px; overflow: hidden; border-radius: 16px;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
                      >
                        <img
                          height="100%"
                          src=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-cmg3fn-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-qy0ict-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-r441lk-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M10 14.0625C11.7259 14.0625 13.125 12.6634 13.125 10.9375C13.125 9.21161 11.7259 7.8125 10 7.8125C8.27411 7.8125 6.875 9.21161 6.875 10.9375C6.875 12.6634 8.27411 14.0625 10 14.0625Z"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M15.3125 9.06251C16.0404 9.06129 16.7586 9.23018 17.4096 9.55572C18.0607 9.88126 18.6267 10.3544 19.0625 10.9375"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M0.9375 10.9375C1.37328 10.3544 1.93928 9.88126 2.59036 9.55572C3.24144 9.23018 3.95957 9.06129 4.6875 9.06251"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M5.5 16.875C5.91158 16.0321 6.55163 15.3217 7.34722 14.8248C8.14282 14.3279 9.06198 14.0645 10 14.0645C10.938 14.0645 11.8572 14.3279 12.6528 14.8248C13.4484 15.3217 14.0884 16.0321 14.5 16.875"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M4.69004 9.0625C4.21554 9.06298 3.7507 8.92842 3.34984 8.67453C2.94898 8.42064 2.62865 8.05792 2.42628 7.62874C2.22391 7.19956 2.14785 6.72165 2.207 6.25085C2.26615 5.78006 2.45806 5.33581 2.76031 4.97003C3.06256 4.60426 3.46267 4.33205 3.91387 4.18521C4.36508 4.03838 4.84876 4.02298 5.30839 4.14083C5.76802 4.25867 6.18463 4.50489 6.50952 4.85071C6.83442 5.19653 7.05419 5.62767 7.14316 6.09375"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M12.8594 6.09375C12.9483 5.62767 13.1681 5.19653 13.493 4.85071C13.8179 4.50489 14.2345 4.25867 14.6941 4.14083C15.1538 4.02298 15.6375 4.03838 16.0887 4.18521C16.5399 4.33205 16.94 4.60426 17.2422 4.97003C17.5445 5.33581 17.7364 5.78006 17.7955 6.25085C17.8547 6.72165 17.7786 7.19956 17.5763 7.62874C17.3739 8.05792 17.0536 8.42064 16.6527 8.67453C16.2518 8.92842 15.787 9.06298 15.3125 9.0625"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  />
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                Donors
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-e6z9yf-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1jqheh3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-hgkx5n-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M3.125 8.96094V4.375C3.125 4.20924 3.19085 4.05027 3.30806 3.93306C3.42527 3.81585 3.58424 3.75 3.75 3.75H16.25C16.4158 3.75 16.5747 3.81585 16.6919 3.93306C16.8092 4.05027 16.875 4.20924 16.875 4.375V8.96094C16.875 15.5234 11.3047 17.6953 10.1953 18.0625C10.0693 18.1092 9.93072 18.1092 9.80469 18.0625C8.69531 17.6953 3.125 15.5234 3.125 8.96094Z"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M13.4375 8.125L8.85156 12.5L6.5625 10.3125"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  >
                                    <span
                                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                 
                                Deposited
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-1d18k5y-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-r441lk-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M13.75 11.875L17.5 8.125L13.75 4.375"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                  <path
                                    d="M15 16.875H3.125C2.95924 16.875 2.80027 16.8092 2.68306 16.6919C2.56585 16.5747 2.5 16.4158 2.5 16.25V6.875"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                  <path
                                    d="M5.85938 13.75C6.27643 12.1401 7.21619 10.7143 8.53119 9.69621C9.84618 8.67815 11.462 8.1255 13.125 8.125H17.5"
                                    fill="none"
                                    stroke="currentcolor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="1.6"
                                  />
                                </svg>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                              >
                                <span
                                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                                />
                              </div>
                            </div>
                            <div
                              class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                            >
                               
                              Yield
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-19kq2tc-MuiGrid-root"
                          />
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-46wo5z-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1jqheh3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-hgkx5n-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                                      focusable="false"
                                      viewBox="0 0 20 20"
                                    >
                                      <path
                                        d="M17.118 10C15.205 13.9602 10 16.875 10 16.875C10 16.875 2.1875 12.5 2.1875 7.18751C2.1875 6.24836 2.51289 5.33821 3.1083 4.61193C3.70371 3.88564 4.53236 3.38808 5.45328 3.2039C6.37419 3.01971 7.33047 3.16029 8.15943 3.6017C8.98838 4.04311 9.63879 4.7581 10 5.62501C10.3612 4.7581 11.0116 4.04311 11.8406 3.6017C12.3009 3.35657 12.8005 3.20422 13.3115 3.14874"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                      <path
                                        d="M18 3.5L9.99659 11.5L7 9"
                                        fill="none"
                                        stroke="currentcolor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="1.6"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item metric css-159wrwf-MuiGrid-root"
                                  >
                                    0
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item subtext css-159wrwf-MuiGrid-root"
                              >
                                 
                                Deposit Goal
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 project-goal-progress css-bhsuuc-MuiGrid-root"
                          >
                            <span
                              aria-valuemax="100"
                              aria-valuemin="0"
                              aria-valuenow="0"
                              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1mcjo4x-MuiLinearProgress-root"
                              role="progressbar"
                            >
                              <span
                                class="MuiLinearProgress-bar ProjectCard-progress MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1o31aob-MuiLinearProgress-bar1"
                                style="transform: translateX(-100%);"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
                      >
                        <button
                          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-8aw5i7-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          Connect Wallet
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7 css-mxqc31-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-m19e0g-MuiPaper-root"
          style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1y6dg9a-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item card-header css-159wrwf-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-gg4vpm"
              >
                <div
                  class="MuiBox-root css-1xhj18k"
                >
                  <h5
                    class="MuiTypography-root MuiTypography-h5 header-text css-903ewo-MuiTypography-root"
                  >
                    About
                  </h5>
                </div>
                <div
                  class="top-right"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                    href="https://project.co"
                    target="_blank"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M 9.991 0 C 4.471 0 0 4.48 0 10 C 0 15.52 4.471 20 9.991 20 C 15.521 20 20 15.52 20 10 C 20 4.48 15.521 0 9.991 0 Z M 16.921 6 L 13.971 6 C 13.651 4.751 13.191 3.551 12.591 2.44 C 14.431 3.071 15.961 4.351 16.921 6 Z M 10.001 2.04 C 10.831 3.24 11.481 4.571 11.911 6 L 8.091 6 C 8.521 4.571 9.171 3.24 10.001 2.04 Z M 2.26 12 C 2.101 11.36 2.001 10.691 2.001 10 C 2.001 9.311 2.101 8.64 2.26 8 L 5.641 8 C 5.561 8.66 5.501 9.32 5.501 10 C 5.501 10.68 5.561 11.34 5.641 12 L 2.26 12 Z M 3.081 14 L 6.031 14 C 6.351 15.251 6.811 16.451 7.411 17.56 C 5.571 16.931 4.041 15.66 3.081 14 Z M 6.031 6 L 3.081 6 C 4.041 4.34 5.571 3.071 7.411 2.44 C 6.811 3.551 6.351 4.751 6.031 6 Z M 10.001 17.96 C 9.171 16.76 8.521 15.431 8.091 14 L 11.911 14 C 11.481 15.431 10.831 16.76 10.001 17.96 Z M 12.341 12 L 7.661 12 C 7.571 11.34 7.501 10.68 7.501 10 C 7.501 9.32 7.571 8.651 7.661 8 L 12.341 8 C 12.431 8.651 12.501 9.32 12.501 10 C 12.501 10.68 12.431 11.34 12.341 12 Z M 12.591 17.56 C 13.191 16.451 13.651 15.251 13.971 14 L 16.921 14 C 15.961 15.651 14.431 16.931 12.591 17.56 Z M 14.361 12 C 14.441 11.34 14.501 10.68 14.501 10 C 14.501 9.32 14.441 8.66 14.361 8 L 17.741 8 C 17.9 8.64 18.001 9.311 18.001 10 C 18.001 10.691 17.9 11.36 17.741 12 L 14.361 12 Z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
            >
              <div
                class="project-content"
              >
                <p>
                  A longer description for the profile
                </p>
                

              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
